--- a/index.html
+++ b/index.html
@@ -1,65 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
+    />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Weather Dashboard</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Weather Dashboard</h1>
-        <p id="current-time">
-            <!-- time el -->
-        </p>
+      <h1>Weather Dashboard</h1>
+      <p id="current-time">
+        <!-- time el -->
+      </p>
     </header>
 
     <main class="conainer-fluid">
-        <div class="row">
-            <!-- search bar cont-->
-            <div class="col-12 col-md-6 p-2 search-column">
-                <!-- search bar el -->
-                <form class="border p-2" id="search-form-el">
-                    <h4>Search City</h4>
-                    <input class="form-input" id="search-input" />
-                    <button class="btn btn-primary" type="submit">Search</button>
-                </form>
-            </div>
-            <div class="search-hist border" id="search-hist-el">
-                <!-- search hist el -->
-            </div>
+      <div class="row">
+        <!-- search bar cont-->
+        <div class="col-12 col-md-6 p-2 search-column">
+          <!-- search bar el -->
+          <form class="border p-2" id="search-form-el">
+            <h4>Search City</h4>
+            <input class="form-input" id="search-input" />
+            <button class="btn btn-primary" type="submit">Search</button>
+          </form>
+        </div>
+        <div class="search-hist border" id="search-hist-el">
+          <!-- search hist el -->
         </div>
 
         <div class="col-12 col-md-9">
-            <!-- forecast cont -->
-            <div class="row border">
-                <!-- current weather cont -->
-                <div class="col-12">
-                    <!-- current city name el -->
-                    <h2 id="displayed-city"></h2>
-                    <!-- current weather el -->
-                    <div  class="list-group" id="current-weather-el"></div>
-                </div>
+          <!-- forecast cont -->
+          <div class="row border">
+            <!-- current weather cont -->
+            <div class="col-12">
+              <!-- current city name el -->
+              <h2 id="displayed-city"></h2>
+              <!-- current weather el -->
+              <div class="list-group" id="current-weather-el"></div>
             </div>
-            <div class="row border">
-                <!-- five day cont -->
-                <h2 class="col-12" id="five-day-title-el"></h2>
-                <div class="d-flex" id="current-five-day-el">
-                    <!-- five day el -->
-                </div>
+          </div>
+          <div class="row border">
+            <!-- five day cont -->
+            <h2 class="col-12" id="five-day-title-el"></h2>
+            <div class="d-flex" id="current-five-day-el">
+              <!-- five day el -->
             </div>
+          </div>
         </div>
-        
+      </div>
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script src="./assets/js/script.js"></script>
-    
-</body>
+  </body>
 </html>
